Stats links fix

--- a/app/views/components/_header.html.erb
+++ b/app/views/components/_header.html.erb
@@ -17,7 +17,7 @@
 
 %>
 
-<header class="header pt-5 pt-lg-10" data-controller="components--header components--modal" data-action="scroll@window->components--header#onScroll">
+<header id="header" class="header pt-5 pt-lg-10" data-controller="components--header components--modal" data-action="scroll@window->components--header#onScroll">
   <div class="container ">
     <div class="header-wrap d-block position-relative w-100">
       <div class="header-content d-flex align-items-center justify-content-between bg-dark p-3">
