--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -148,8 +148,8 @@
     <div class="col col-12 col-lg-5">
       <h2 class="display-5 mb-5 fw-bold">Workshopy</h2>
       <p class="fs-5 mb-5">V rámci 90 minut interaktivních aktivit pomůžeme nejen studentům středních škol v základní orientaci v mediální oblasti, předáme ale také znalost rozšiřovat fakta od názorově zabarvených textů a prohloubíme rovněž kritické myšlení, což je pro dnešní dobu zcela zásadní dovednost.</p>
-      <a href="/stranka/workshopy-demagogcz" class="btn bg-primary">
-        <span>CTA Workshopy</span>
+      <a href="/stranka/workshopy-demagogcz" class="btn bg-primary h-44px">
+        <span>Zjistit více</span>
       </a>
     </div>
     <div class="col col-12 col-lg-5">
