Fix promises responzivity

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <% if content_for?(:stylesheets) %><%= yield :stylesheets %><% end %>
     <%= render partial: "shared/meta" %>
     <meta name="color-scheme" content="light only">
+    <meta name="format-detection" content="telephone=no">
   </head>
 
   <body>
