--- a/app/assets/stylesheets/_varibles.scss
+++ b/app/assets/stylesheets/_varibles.scss
@@ -21,7 +21,7 @@ $danger: #e91e63 !default;
 $red: #E32219 !default;
 
 $body-bg: $white !default;
-$font-family: 'Lato', sans-serif;
+$font-family: 'Inter', sans-serif;
 
 $header-shadow: 0 2px 5px 0px rgba($dark, 0.1 )!default;
 $base-transition: 900ms cubic-bezier(0.22, 1, 0.19, 1);
