--- a/app/views/article/social_media.html.erb
+++ b/app/views/article/social_media.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="col col-12 col-lg-4">
       <div
-        class="bg-dark text-white p-5 p-lg-8 rounded-l mb-10"
+        class="bg-dark-light text-white p-5 p-lg-8 rounded-l mb-10"
         data-controller="components--mobile-expander"
         data-action="resize@window->components--mobile-expander#layout"
         data-components--mobile-expander-breakpoint="992"
