--- a/app/views/speaker/index.html.erb
+++ b/app/views/speaker/index.html.erb
@@ -87,7 +87,7 @@ content_for(:description, "Za svou existenci Demagog.cz už ověřil výroky sto
           <div class="separator bg-dark mb-5"></div>
         <% end %>
         <div class="w-100 py-2">
-          <a class="btn w-100" href="<%= speakers_path() %>">
+          <a class="btn w-100" data-action="click->components--filter#clearFilter">
             <span class="text-white">Zrušit filtry</span>
           </a>
         </div>
