--- a/app/views/statement/_filterable_list.html.erb
+++ b/app/views/statement/_filterable_list.html.erb
@@ -135,7 +135,7 @@
       <% end %>
 
       <div class="w-100 py-2">
-        <a class="btn w-100" href="">
+        <a class="btn w-100" data-action="click->components--filter#clearFilter"> 
           <span class="text-white">Zrušit filtry</span>
         </a>
       </div>
