--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -1,47 +1,107 @@
-/* Webfont: Lato-Bold */@font-face {
-    font-family: 'Lato';
-    src: font-url('Lato-Bold.eot'); /* IE9 Compat Modes */
-    src: font-url('Lato-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         font-url('Lato-Bold.woff2') format('woff2'), /* Modern Browsers */
-         font-url('Lato-Bold.woff') format('woff'), /* Modern Browsers */
-         font-url('Lato-Bold.ttf') format('truetype');
-    font-style: normal;
+@font-face {
+    font-family: 'Inter';
+    src: font-url('Inter-Bold.eot');
+    src: font-url('Inter-Bold.eot?#iefix') format('embedded-opentype'),
+        font-url('Inter-Bold.woff2') format('woff2'),
+        font-url('Inter-Bold.woff') format('woff'),
+        font-url('Inter-Bold.ttf') format('truetype');
     font-weight: bold;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: Lato-BoldItalic */@font-face {
-    font-family: 'Lato';
-    src: font-url('Lato-BoldItalic.eot'); /* IE9 Compat Modes */
-    src: font-url('Lato-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         font-url('Lato-BoldItalic.woff2') format('woff2'), /* Modern Browsers */
-         font-url('Lato-BoldItalic.woff') format('woff'), /* Modern Browsers */
-         font-url('Lato-BoldItalic.ttf') format('truetype');
-    font-style: italic;
-    font-weight: bold;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: Lato-Italic */@font-face {
-    font-family: 'Lato';
-    src: font-url('Lato-Italic.eot'); /* IE9 Compat Modes */
-    src: font-url('Lato-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         font-url('Lato-Italic.woff2') format('woff2'), /* Modern Browsers */
-         font-url('Lato-Italic.woff') format('woff'), /* Modern Browsers */
-         font-url('Lato-Italic.ttf') format('truetype');
-    font-style: italic;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: Lato-Regular */@font-face {
-    font-family: 'Lato';
-    src: font-url('Lato-Regular.eot'); /* IE9 Compat Modes */
-    src: font-url('Lato-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         font-url('Lato-Regular.woff2') format('woff2'), /* Modern Browsers */
-         font-url('Lato-Regular.woff') format('woff'), /* Modern Browsers */
-         font-url('Lato-Regular.ttf') format('truetype');
     font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: font-url('Inter-ExtraBold.eot');
+    src: font-url('Inter-ExtraBold.eot?#iefix') format('embedded-opentype'),
+        font-url('Inter-ExtraBold.woff2') format('woff2'),
+        font-url('Inter-ExtraBold.woff') format('woff'),
+        font-url('Inter-ExtraBold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: font-url('Inter-Black.eot');
+    src: font-url('Inter-Black.eot?#iefix') format('embedded-opentype'),
+        font-url('Inter-Black.woff2') format('woff2'),
+        font-url('Inter-Black.woff') format('woff'),
+        font-url('Inter-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: font-url('Inter-ExtraLight.eot');
+    src: font-url('Inter-ExtraLight.eot?#iefix') format('embedded-opentype'),
+        font-url('Inter-ExtraLight.woff2') format('woff2'),
+        font-url('Inter-ExtraLight.woff') format('woff'),
+        font-url('Inter-ExtraLight.ttf') format('truetype');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: font-url('Inter-Light.eot');
+    src: font-url('Inter-Light.eot?#iefix') format('embedded-opentype'),
+        font-url('Inter-Light.woff2') format('woff2'),
+        font-url('Inter-Light.woff') format('woff'),
+        font-url('Inter-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: font-url('Inter-Thin.eot');
+    src: font-url('Inter-Thin.eot?#iefix') format('embedded-opentype'),
+        font-url('Inter-Thin.woff2') format('woff2'),
+        font-url('Inter-Thin.woff') format('woff'),
+        font-url('Inter-Thin.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: font-url('Inter-Medium.eot');
+    src: font-url('Inter-Medium.eot?#iefix') format('embedded-opentype'),
+        font-url('Inter-Medium.woff2') format('woff2'),
+        font-url('Inter-Medium.woff') format('woff'),
+        font-url('Inter-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: font-url('Inter-Regular.eot');
+    src: font-url('Inter-Regular.eot?#iefix') format('embedded-opentype'),
+        font-url('Inter-Regular.woff2') format('woff2'),
+        font-url('Inter-Regular.woff') format('woff'),
+        font-url('Inter-Regular.ttf') format('truetype');
     font-weight: normal;
-    text-rendering: optimizeLegibility;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: font-url('Inter-SemiBold.eot');
+    src: font-url('Inter-SemiBold.eot?#iefix') format('embedded-opentype'),
+        font-url('Inter-SemiBold.woff2') format('woff2'),
+        font-url('Inter-SemiBold.woff') format('woff'),
+        font-url('Inter-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
 }
