--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -8,7 +8,7 @@
           <div class="bg-secondary min-h-100 rounded-l p-5 p-lg-10">
             <h2 class="display-5 fw-bold mb-5">Zůstaňte v kontaktu</h2>
             <p class="fs-2 mb-4">
-              Každých pár týdnů posíláme newsletter se shrnutím naší práce a zajímavostmi ze zákulisí.
+              Každých pár týdnů posíláme newsletter se shrnutím naší práce&nbsp;a zajímavostmi ze zákulisí.
             </p>
             <form class="subscribe-to-newsletter-form" action="https://demagog.us4.list-manage.com/subscribe/post" method="POST">
               <div class="d-flex flex-wrap flex-lg-nowrap">
@@ -17,7 +17,7 @@
                   <input type="hidden" name="id" value="f2c56d2e38">
                   <input type="email" class="input" placeholder="Váš e-mail" name="MERGE0" id="MERGE0" autocapitalize="off" autocorrect="off">
                   <div class="small mt-4">
-                    Stisknutím „Začít odebírat‟ souhlasíte se zpracováním e-mailu dle <br><a class="text-dark" href="/stranka/zasady-zpracovani-osobnich-udaju">Zásad zpracování osobních údajů</a>.
+                    Stisknutím „začít odebírat‟ souhlasíte se zpracováním e&#8209;mailu dle <br><a class="text-dark" href="/stranka/zasady-zpracovani-osobnich-udaju">Zásad zpracování osobních údajů</a>.
                   </div>
                 </div>
                 <div class="min-w-150px mt-5 mt-lg-0">
@@ -31,7 +31,7 @@
           <div class="bg-primary min-h-100 rounded-l p-5 p-lg-10">
             <h2 class="display-5 fw-bold mb-5 text-white">Sociální sítě</h2>
             <p class="fs-2">
-              Nenechte si ujít nejnovější události z Demagog.cz. Sdílením našich příspěvku přátelům podpoříte naši práci.
+              Nenechte si ujít nejnovější události&nbsp;z Demagog.cz. Sdílením našich příspěvků přátelům podpoříte naši práci.
             </p>
             <div class="d-flex flex-wrap mt-4">
               <a class="btn white me-4 mb-2 ps-2" href="https://www.facebook.com/Demagog.CZ">
@@ -70,8 +70,8 @@
     <div class="bg-dark text-white p-5 p-lg-10 rounded-l my-5">
       <div class="row g-5">
         <div class="col col-12 col-md-6 col-lg-4">
-          <h4 class="fs-5 mb-4">Demagog.cz, z.s</h4>
-          <p class="small mb-4">IČO: 05 14 05 44 <br>se sídlem Roháčova 145/14<br>Žižkov, 130 00 Praha 3</p>
+          <h4 class="fs-5 mb-4">Demagog.cz, z.s.</h4>
+          <p class="small mb-4">IČO: 05140544 <br>se sídlem Roháčova 145/14<br>Žižkov, 130 00 Praha 3</p>
           <p class="small mb-4">Zapsaný ve spolkovém rejstříku u Městského soudu v Praze.</p>
           <p class="small mb-4">Demagog.cz má <a class="text-white" href="https://www.rb.cz/povinne-zverejnovane-informace/transparentni-ucty?mvcPath=transactions&accountNumber=9711283001&path=transactions">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
         </div>
@@ -94,7 +94,7 @@
           <div class="">
             <h6 class="small">Pro média</h6>
             <p class="small">
-              <a class="text-white" href="https://demagogcz-uloziste.fra1.digitaloceanspaces.com/Demagog.cz%20logo.zip">Loga ke stažení</a>
+              <a class="text-white" href="https://onedrive.live.com/?authkey=%21APcY4m0I%5F%2DYrtMo&id=A3F546CED092EB9D%2191240&cid=A3F546CED092EB9D">Loga ke stažení</a>
             </p>
           </div>
 
