--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -43,7 +43,7 @@
         </div>
         <div class="mt-5">
           <p class="fs-5 mb-4">Upozorněte nás, když narazíte na nepravdivý obsah na sociálních sítích!</p>
-          <a href="/stranka/workshopy-demagogcz" class="btn bg-secondary w-100">
+          <a href="/stranka/kontakty" class="btn bg-secondary w-100">
             <span class="text-dark">Upozornit</span>
           </a>
         </div>
@@ -147,7 +147,7 @@
   <div class="row g-10 justify-content-between">
     <div class="col col-12 col-lg-5">
       <h2 class="display-5 mb-5 fw-bold">Workshopy</h2>
-      <p class="fs-5 mb-5">V rámci 90 minut interaktivních aktivit pomůžeme nejen studentům středních škol v základní orientaci v mediální oblasti, předáme ale také znalost rozšiřovat fakta od názorově zabarvených textů a prohloubíme rovněž kritické myšlení, což je pro dnešní dobu zcela zásadní dovednost.</p>
+      <p class="fs-5 mb-5">V rámci 90 minut interaktivních seminářů pomůžeme nejen studentům středních škol v základní orientaci v mediální oblasti, předáme ale také znalost rozlišovat fakta od názorově zabarvených textů a prohloubíme rovněž kritické myšlení, což je pro dnešní dobu zcela zásadní dovednost.</p>
       <a href="/stranka/workshopy-demagogcz" class="btn bg-primary h-44px">
         <span>Zjistit více</span>
       </a>
