--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -291,12 +291,12 @@
                    class="promise-detail py-3"
                   >
                     <% unless statement.assessment.short_explanation.nil? %>
-                    <div class="">
-                      <p class="fs-6"><%= statement.assessment.short_explanation %></p>
+                    <div class="content fs-6">
+                      <%= statement.assessment.short_explanation %>
                     </div>
                     <div class="accordion-detail close fs-6" aria-show="false">
                       <div class="py-2 py-lg-5">
-                        <div class="scroll-vertical mh-400px">
+                        <div class="scroll-vertical mh-400px content fs-6">
                           <%= raw(to_lazy_loading_iframes_and_images(statement.assessment.explanation_html)) %>
                         </div>
                       </div>
@@ -314,7 +314,7 @@
                     <div class="d-block d-lg-flex justify-content-between align-items-center">
                       <% unless statement.assessment.short_explanation.nil? %>
                       <a
-                        class="link"
+                        class="link text-dark"
                         data-action="click->components--overview#toggleDetail"
                         data-accordion-url="slib-<%= statement.id %>"
                       >
