--- a/app/views/speaker/show.html.erb
+++ b/app/views/speaker/show.html.erb
@@ -10,8 +10,8 @@ content_for(
 <section class="section">
   <div class="row g-5 justify-content-between">
     <div class="col col-12 col-md-6 col-lg-8">
-      <div class="d-flex">
-        <div class="w-125px position-relative me-10">
+      <div class="d-flex flex-wrap">
+        <div class="w-125px position-relative me-md-5 me-lg-10 mb-5 mb-md-0 ">
           <span class="symbol symbol-square symbol-circle">
             <%= render(PortraitComponent.new(speaker: @speaker)) %>
           </span>
