Stats link filter cursor

--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -314,7 +314,7 @@
                     <div class="d-block d-lg-flex justify-content-between align-items-center">
                       <% unless statement.assessment.short_explanation.nil? %>
                       <a
-                        class="link text-dark"
+                        class="link text-dark text-underline"
                         data-action="click->components--overview#toggleDetail"
                         data-accordion-url="slib-<%= statement.id %>"
                       >
