About sticker fix

--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -257,7 +257,7 @@
                     </svg>
                   <% end %>
                 </span>
-                <span class="fs-7 text-uppercase text-<%= @promises_list_rating_classes[statement.assessment.promise_rating.key] %>">
+                <span class="fs-7 text-uppercase fw-bold text-<%= @promises_list_rating_classes[statement.assessment.promise_rating.key] %>">
                   <%= @promises_list_rating_labels[statement.assessment.promise_rating.key] %>
                 </span>
               </div>
