--- a/app/views/article/collaboration_with_facebook.html.erb
+++ b/app/views/article/collaboration_with_facebook.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row g-5 g-lg-10 flex-lg-row-reverse">
   <div class="col col-12">
-    <%= render partial: "components/tags", locals: { active: 'Fact-check pro facebook' } %>
+    <%= render partial: "components/tags", locals: { active: 'collaboration_with_facebook' } %>
   </div>
   <% if @page_number.blank? %>
     <div class="col col-12 col-lg-4">
