--- a/app/views/components/_tags.html.erb
+++ b/app/views/components/_tags.html.erb
@@ -1,35 +1,8 @@
 <div class="d-flex flex-wrap align-items-center justify-content-between">
   <div class="d-flex flex-wrap align-items-center">
-    <% if active && active == "presidential_election" %>
-    <span class="mb-2 h-44px me-5 d-flex align-items-center">
-      <span class="m-0 p-0 lh-1 me-2">
-        <svg width="27" height="39" viewBox="0 0 27 39" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M27 17.4442C24.4309 13.4392 19.8425 10.7598 14.5924 10.7598C6.52983 10.7598 0 17.046 0 24.8031C0 32.5602 6.52983 38.8512 14.5924 38.8512C19.8328 38.8512 24.4114 36.1858 26.9854 32.1949L13.2348 24.864L27 17.4442Z" fill="#111827"/>
-        <path d="M17.6188 3.70719L13.9695 0.00195312L10.4127 3.5854L5.32312 0.00195312V7.79653H22.8398V0.00195312L17.6188 3.70719Z" fill="#111827"/>
-        </svg>
-      </span>
-      <span class="display-4 fw-bold lh-1 m-0 p-0">Volba prezidenta 2023</span>
-    </span>
-    <% end %>
-
-    <% if active && active == "collaboration_with_facebook" %>
-    <span class="mb-2 h-44px me-5 d-flex align-items-center">
-      <span class="m-0 p-0 lh-1 me-2">
-        <svg width="86" height="40" viewBox="0 0 43 20" fill="none" xmlns="http://www.w3.org/2000/svg" class="fill-dark">
-          <path d="M19.5167 4.75904C17.6585 1.90762 14.3434 0 10.5486 0C4.7208 0 0 4.4759 0 10.0014C0 15.527 4.7208 20.0029 10.5486 20.0029C14.3343 20.0029 17.6464 18.1038 19.5076 15.2638L9.56527 10.0415L19.5167 4.75904Z"/>
-          <path d="M32.4635 0.0175781C27.809 0.0175781 23.8695 2.88044 22.4729 6.85013L16.458 10.0447L22.491 13.2136C23.7096 16.6228 26.8166 19.2053 30.6295 19.8403V10.9971H28.6295V8.74631H30.6295V6.61275C30.6295 5.19132 31.7546 4.12454 33.2538 4.12454H35.7545V6.2581H33.8812C33.3805 6.2581 33.1301 6.49548 33.1301 6.97025V8.74917H35.7545V11H33.1301V19.9661C38.6352 19.6372 42.997 15.3129 42.997 10.0104C42.997 4.70798 38.2823 0.0175781 32.4635 0.0175781Z"/>
-        </svg>
-      </span>
-      <span class="display-4 fw-bold lh-1 m-0 p-0">Facebook Fact-check</span>
-    </span>
-    <% end %>
-
-
-
-    <% if active != "presidential_election" %>
     <a
-      href="/volba-prezidenta-2023"
-      class="btn outline mb-2 h-44px me-2 fs-6 px-4"
+      href="/<%= 'volba-prezidenta-2023' if active != "presidential_election" %>"
+      class="btn outline mb-2 h-44px me-2 fs-6 px-4 <%= 'active' if active && active == "presidential_election" %>"
     >
       <span class="m-0 p-0 lh-1 me-2">
         <svg width="16" height="24" viewBox="0 0 16 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -40,11 +13,9 @@
       </span>
       <span class="lh-1 m-0 p-0">Volba prezidenta 2023</span>
     </a>
-    <% end %>
-    <% if active != "collaboration_with_facebook" %>
     <a
-      href="/spoluprace-s-facebookem"
-      class="btn outline mb-2 h-44px me-2 fs-6 px-4"
+      href="/<%= 'spoluprace-s-facebookem' if active != "collaboration_with_facebook" %>"
+      class="btn outline mb-2 h-44px me-2 fs-6 px-4 <%= 'active' if active && active == "collaboration_with_facebook" %>"
     >
       <span class="h-20px me-2">
         <svg width="43" height="20" viewBox="0 0 43 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -54,7 +25,6 @@
       </span>
       <span class="lh-1 m-0 p-0">Facebook Fact-check</span>
     </a>
-    <% end %>
   </div>
   <% if active %>
   <div>
