Fix search tests

--- a/app/views/speaker/_listed.html.erb
+++ b/app/views/speaker/_listed.html.erb
@@ -1,4 +1,4 @@
-<div class="col">
+<div class="col s-speaker">
   <div class="h-100 d-flex flex-column justify-content-between align-items-center">
     <div class="w-100 p-5">
       <%= link_to speaker_path(speaker), class: 'd-block position-relative' do %>
