--- a/app/views/statement/_detail.html.erb
+++ b/app/views/statement/_detail.html.erb
@@ -2,7 +2,7 @@
 <% show_medium_and_date = true if local_assigns[:show_medium_and_date].nil? %>
 <% wide_display = true if local_assigns[:wide_display].nil? %>
 
-<article class="mb-10">
+<article class="mb-10 s-statement">
   <div class="row g-6">
     <div class="col col-12 col-md-6 col-lg-7">
       <div class="d-flex">
