--- a/app/views/components/_article_main.html.erb
+++ b/app/views/components/_article_main.html.erb
@@ -1,6 +1,6 @@
 <% article_presenter = ArticlePresenter.new(article) %>
 
-<article class="col">
+<article class="col s-article">
   <div class="row g-2 g-lg-5">
     <div class="col col-12 col-md-5">
       <div class="w-100">
@@ -65,7 +65,7 @@
 
     </div>
     <div class="col col-12 col-md-7">
-      <h2 class="fs-2 fw-bold mb-2"><%= link_to(article.title, article_path(article), class: "text-dark") %></h2>
+      <h2 class="fs-2 fw-bold mb-2"><%= link_to(article.title, article_path(article), class: "text-dark s-title") %></h2>
       <div class="mb-2">
         <% if article.article_type.name == ArticleType::DEFAULT %>
           <% if article.source %>
