--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -4,7 +4,7 @@
 <div class="row g-5 g-lg-10 justify-content-center">
   <div class="col col-12 col-lg-8">
     <%= form_tag search_path, method: :get, class: "position-relative" do %>
-      <%= text_field_tag :q, @query, class: "input outline focus-primary fs-4 min-h-50px", autofocus: @query.empty?, placeholder: "Zadejte hledaný výraz…" %>
+      <%= text_field_tag :q, @query, class: "input outline focus-primary fs-4 min-h-50px s-search-field", autofocus: @query.empty?, placeholder: "Zadejte hledaný výraz…" %>
       <button type="submit" class="search-btn d-flex align-items-center justify-content-center right top w-50px">
         <svg height="17" viewBox="0 0 17 17" width="17" xmlns="http://www.w3.org/2000/svg">
           <path d="m1181.34341 104.52344-4.0019-4.018708c1.69829-2.5558307 1.36199-5.9523952-.8071-8.1214883-1.22747-1.2106567-2.84168-1.8832437-4.57359-1.8832437s-3.34612.672587-4.55678 1.8832437c-2.50539 2.5222013-2.50539 6.6081675 0 9.1135543 2.16909 2.169093 5.56566 2.505387 8.12149.823919l4.01871 4.018707c.18496.184962.50444.184962.6894 0l1.10977-1.109768c.20177-.201776.20177-.521255 0-.706216zm-6.28869-4.489519c-1.69828 1.698282-4.47271 1.698282-6.1878 0-1.69829-1.6982821-1.69829-4.4727036 0-6.1878005 1.69828-1.6982823 4.4727-1.6982823 6.1878 0 1.69828 1.7150969 1.69828 4.4895184 0 6.1878005z" fill="#3c325c" transform="translate(-1165 -90)"/>
@@ -14,7 +14,7 @@
   </div>
   <% if @type.nil? %>
   <% unless @speakers.empty? %>
-    <div class="col col-12">
+    <div class="col col-12 s-section-speakers">
       <div class="w-100">
         <div class="mb-5">
           <h3 class="display-5 fw-bold">Nalezení politici</h3>
@@ -24,14 +24,14 @@
         </div>
         <% if @speakers.total_count > 4 %>
           <div class="my-5 d-flex">
-            <%= show_more_link(:speakers, @speakers.total_count) %>
+          <%= show_more_link(:speakers, @speakers.total_count) %>
           </div>
         <% end %>
       </div>
     </div>
   <% end %>
   <% unless @articles.empty? %>
-    <div class="col col-12">
+    <div class="col col-12 s-section-articles">
       <div class="mb-5">
         <h3 class="display-5 fw-bold">Nalezené výstupy</h3>
       </div>
@@ -46,7 +46,7 @@
     </div>
   <% end %>
   <% unless @statements.empty? %>
-    <div class="col col-12">
+    <div class="col col-12 s-section-statements">
       <div class="mb-5">
         <h3 class="display-5 fw-bold">Nalezené výroky</h3>
       </div>
@@ -74,7 +74,7 @@
         <h2 class="display-5 fw-bold">Nalezené výsledky</h2>
       </div>
       <div class="my-5">
-        <a href="<%= search_path(q: params[:q]) %>" class="btn h-50px fs-6">
+        <a href="<%= search_path(q: params[:q]) %>" class="btn h-50px fs-6 s-back-link">
           <span class="me-2">←</span>
           <span>Zpět na souhrn výsledků hledání</span>
         </a>
@@ -92,7 +92,7 @@
     <% end %>
     <% if @type == "speakers" %>
     <div class="row row-cols-2 row-cols-lg-6 g-5 g-lg-10">
-      <%= render_records(@type, @type_results.page(params[:page]).records.to_a) %>
+      <%= render_records(@type, @type_results.per(12).page(params[:page]).records.to_a) %>
     </div>
     <% end %>
     <div class="d-flex justify-content-center my-5 my-lg-10">
