--- a/app/views/article/presidential_election.html.erb
+++ b/app/views/article/presidential_election.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, get_web_content("Volba prezidenta 2023", "title")) %>
+
 <div class="row g-5 g-lg-10 flex-lg-row-reverse">
   <div class="col col-12">
     <%= render partial: "components/tags", locals: { active: 'presidential_election' } %>
@@ -16,13 +18,13 @@
         <div class="expander expander-dark-light" data-target="components--mobile-expander.expander">
           <h1 class="display-5 fw-bold m-0 p-0">Volba prezidenta 2023</h1>
           <div class="fs-6 mt-5">
-            13. a 14. ledna se koná první kolo prezidentských voleb. Projekt Demagog.cz i pečlivě sleduje debaty a interview s kandidáty a publikuje hodnocení jejich faktických výroků.
+            13. a 14. ledna se koná první kolo prezidentských voleb. Projekt Demagog.cz i tentokrát pečlivě sleduje debaty a rozhovory s kandidáty a publikuje hodnocení jejich faktických výroků.
           </div>
           <div class="fs-1 fw-bold mt-5">
             <span class="text-primary">76</span> ověřených výroků
           </div>
           <div class="fs-6 mt-5">
-            "Níže najdete přehled ověřených výroků tří kandidátů, kteří mají dle posledních průzkumů šanci se dostat do 2. kola voleb. Výroky budeme postupně aktualizovat a doplňovat.
+            Níže najdete přehled ověřených výroků tří kandidátů, kteří mají dle posledních průzkumů šanci se dostat do 2. kola voleb. Výroky budeme postupně aktualizovat a doplňovat.
           </div>
           <div class="mt-10">
             <h2 class="fs-1">Statistika kandidátů</h2>
