--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -25,7 +25,7 @@
     >
       <div class="expander expander-dark-light" data-target="components--mobile-expander.expander">
         <div class="w-100 position-relative">
-          <h2 class="display-5 mb-4">Co je Demagog.cz?</h2>
+          <h2 class="display-5 fw-bold mb-4">Co je Demagog.cz?</h2>
           <div class="fs-6 mb-10">
             <%= raw(get_web_content("homepage", "intro")) %>
           </div>
