--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -27,7 +27,7 @@
   </aside>
 
   <aside class="organizations" id="ifcn">
-    <h2>Demagog.cz ctí kodex zásad Mezinárodní factcheckingové organizace (IFCN):</h2>
+    <h2>Demagog.cz ctí kodex zásad Mezinárodní fact-checkingové organizace (IFCN):</h2>
     <p>
       <a href="https://ifcncodeofprinciples.poynter.org/profile/demagogcz" target="_blank">
         <img src="https://cdn.ifcncodeofprinciples.poynter.org/storage/badges/36C9D629-AED1-C760-8B88-9FD45DD9156F.png" alt="Demagog.cz is IFCN signatory" style="max-width:100%" />
