--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -31,7 +31,7 @@
           <div class="bg-primary min-h-100 rounded-l p-5 p-lg-10">
             <h2 class="display-5 fw-bold mb-5 text-white">Sociální sítě</h2>
             <p class="fs-2">
-              Nenechte si ujít nejnovější události&nbsp;z Demagog.cz. Sdílením našich příspěvků přátelům podpoříte naši práci.
+              Nenechte si ujít nejnovější události z&nbsp;Demagog.cz. Sdílením našich příspěvků přátelům podpoříte naši práci.
             </p>
             <div class="d-flex flex-wrap mt-4">
               <a class="btn white me-2 mb-2 ps-2" href="https://www.facebook.com/Demagog.CZ">
