--- a/app/assets/stylesheets/core/_utilities.scss
+++ b/app/assets/stylesheets/core/_utilities.scss
@@ -238,6 +238,13 @@ $utilities: map-merge(
       values: (
         normal: $font-weight-normal,
         bold: $font-weight-bold,
+        300: 300,
+        400: 400,
+        500: 500,
+        600: 600,
+        700: 700,
+        800: 800,
+        900: 900,
       )
     ),
     "line-height": (
