--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
       </div>
     </main>
     <%= render "components/footer" %>
+    <%= render "components/cookies" %>
 
 
     <div class="modal" id="modalDanate" data-controller="components--modal" data-target="components--modal.modal">
