--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -6,7 +6,7 @@
   data-controller="components--overview"
 
 >
-  <h2 class="fs-1 fw-bold"><%= @all.size %> sledovaných slibů</h2>
+  <h2 class="fs-1 fw-600"><%= @all.size %> sledovaných slibů</h2>
   <div class="">
     <div class="d-flex flex-wrap my-10">
       <% @promise_rating_keys.each do |promise_rating_key| %>
@@ -17,13 +17,13 @@
                 <path d="M0.0507812 6.4745L1.38245 5.10858L6.00525 9.6629L15.5667 0.135742L16.9326 1.50166L6.00525 12.3947L0.0507812 6.4745Z" fill="white"/>
               </svg>
             </span>
-            <span class="fs-4 fw-bold text-uppercase text-primary">
+            <span class="fs-4 fw-600 text-uppercase text-primary">
               <%= @promise_rating_counts[promise_rating_key] %>
               <%= cs_pluralize(@promise_rating_counts[promise_rating_key], "splněný", "splněné", "splněných") %>
             </span>
           <% end %>
           <% if promise_rating_key == "in_progress" %>
-            <span class="fs-4 fw-bold text-uppercase text-secondary">
+            <span class="fs-4 fw-600 text-uppercase text-secondary">
               <%= @promise_rating_counts[promise_rating_key] %>
               <%= cs_pluralize(@promise_rating_counts[promise_rating_key], "průběžně plněný", "průběžně plněné", "průběžně plněných") %>
             </span>
@@ -34,7 +34,7 @@
                 <path d="M1.67756 3.8639C1.25892 3.8639 0.878343 3.71167 0.573881 3.40721C0.269419 3.10274 0.117188 2.72217 0.117188 2.30353C0.117188 1.8849 0.269419 1.50432 0.573881 1.19986C0.878343 0.895395 1.25892 0.743164 1.67756 0.743164C2.09619 0.743164 2.47677 0.895395 2.78123 1.19986C3.08569 1.50432 3.23792 1.8849 3.23792 2.30353C3.23792 2.60799 3.16181 2.83634 3.00958 3.10274C2.85735 3.33109 2.66706 3.52138 2.43871 3.67361C2.21036 3.82584 1.98202 3.8639 1.67756 3.8639ZM8.37572 3.8639C7.95708 3.8639 7.57651 3.71167 7.27204 3.40721C6.96758 3.10274 6.81535 2.72217 6.81535 2.30353C6.81535 1.8849 6.96758 1.50432 7.27204 1.19986C7.57651 0.895395 7.95708 0.743164 8.37572 0.743164C8.79435 0.743164 9.17493 0.895395 9.47939 1.19986C9.78385 1.50432 9.93609 1.8849 9.93609 2.30353C9.93609 2.60799 9.85997 2.83634 9.70774 3.10274C9.55551 3.33109 9.36522 3.52138 9.13687 3.67361C8.90853 3.82584 8.68018 3.8639 8.37572 3.8639ZM15.1119 3.8639C14.6933 3.8639 14.3127 3.71167 14.0083 3.40721C13.7038 3.10274 13.5516 2.72217 13.5516 2.30353C13.5516 1.8849 13.7038 1.50432 14.0083 1.19986C14.3127 0.895395 14.6933 0.743164 15.1119 0.743164C15.5306 0.743164 15.9112 0.895395 16.2156 1.19986C16.5201 1.50432 16.6723 1.8849 16.6723 2.30353C16.6723 2.60799 16.5962 2.83634 16.444 3.10274C16.2917 3.33109 16.1014 3.52138 15.8731 3.67361C15.6447 3.82584 15.3783 3.8639 15.1119 3.8639Z" fill="white"/>
               </svg>
             </span>
-            <span class="fs-4 fw-bold text-uppercase text-gray">
+            <span class="fs-4 fw-600 text-uppercase text-gray">
               <%= @promise_rating_counts[promise_rating_key] %>
               <%= cs_pluralize(@promise_rating_counts[promise_rating_key], "částečně splněný", "částečně splněné", "částečně splněných") %>
             </span>
@@ -45,13 +45,13 @@
                 <path d="M12.8642 1.58955L11.4983 0.223633L6.80319 4.90351L2.1081 0.223633L0.742188 1.58955L5.43348 6.26562L0.742188 10.9417L2.1081 12.3076L6.80319 7.62773L11.4983 12.3076L12.8642 10.9417L8.17291 6.26562L12.8642 1.58955Z" fill="white"/>
               </svg>
             </span>
-            <span class="fs-4 fw-bold text-uppercase text-red">
+            <span class="fs-4 fw-600 text-uppercase text-red">
               <%= @promise_rating_counts[promise_rating_key] %>
               <%= cs_pluralize(@promise_rating_counts[promise_rating_key], "porušený", "porušené", "porušených") %>
             </span>
           <% end %>
           <% if promise_rating_key == "stalled" %>
-            <span class="fs-4 fw-bold text-uppercase text-dark">
+            <span class="fs-4 fw-600 text-uppercase text-dark">
               <%= @promise_rating_counts[promise_rating_key] %>
               <%= cs_pluralize(@promise_rating_counts[promise_rating_key], "nerealizovaný", "nerealizované", "nerealizovaných") %>
             </span>
@@ -81,7 +81,7 @@
     <div class="d-none d-md-flex mt-5">
       <% @promise_rating_keys.each do |promise_rating_key| %>
         <div class="" style="width: <%= @promise_rating_percents[promise_rating_key] %>%">
-          <span class="fs-4 fw-bold  <%= @promise_rating_percents[promise_rating_key] %>%">
+          <span class="fs-4 fw-600  <%= @promise_rating_percents[promise_rating_key] %>%">
             <span class="d-block h-25px mb-4 <%= (
               {
                 PromiseRating::FULFILLED => "text-primary",
@@ -129,7 +129,7 @@
               data-target="components--filter.filterLink"
               aria-show="true"
             >
-              <span class="fs-6 fw-bold">Oblast</span>
+              <span class="fs-6 fw-600">Oblast</span>
               <span class="filter-icon">
                 <svg width="23" height="12" viewBox="0 0 23 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M1 0.597656L11.646 11.2437L22.2435 0.646237" stroke="#111827"/>
@@ -150,7 +150,7 @@
                   data-filter-type="oblast"
                 >
                 <span class="checkmark"></span>
-                <span class="small fw-bold me-2"><%= area_tag.name %></span>
+                <span class="small fw-600 me-2"><%= area_tag.name %></span>
               </div>
               <% end %>
             </div>
@@ -163,7 +163,7 @@
               data-target="components--filter.filterLink"
               aria-show="true"
             >
-              <span class="fs-6 fw-bold">Hodnocení</span>
+              <span class="fs-6 fw-600">Hodnocení</span>
               <span class="filter-icon">
                 <svg width="23" height="12" viewBox="0 0 23 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M1 0.597656L11.646 11.2437L22.2435 0.646237" stroke="#111827"/>
@@ -181,7 +181,7 @@
                   data-filter-type="hodnoceni"
                 >
                 <span class="checkmark"></span>
-                <span class="small fw-bold me-2">
+                <span class="small fw-600 me-2">
                   <%= (
                     {
                       PromiseRating::FULFILLED => "splněné",
@@ -233,7 +233,7 @@
           <div class="separator bg-gray"></div>
           <div class="row g-3 g-lg-6 py-2 align-items-center">
             <div class="col col-12 col-md-5">
-              <span class="fs-6 fw-bold"><%= statement.title %></span>
+              <span class="fs-6 fw-800"><%= statement.title %></span>
             </div>
             <div class="col col-12 col-md-2">
               <span class="fs-6"><%= statement.tags[0].name %></span>
@@ -257,7 +257,7 @@
                     </svg>
                   <% end %>
                 </span>
-                <span class="fs-7 text-uppercase fw-bold text-<%= @promises_list_rating_classes[statement.assessment.promise_rating.key] %>">
+                <span class="fs-7 text-uppercase fw-600 text-<%= @promises_list_rating_classes[statement.assessment.promise_rating.key] %>">
                   <%= @promises_list_rating_labels[statement.assessment.promise_rating.key] %>
                 </span>
               </div>
