--- a/app/components/speaker_list_item_component.html.erb
+++ b/app/components/speaker_list_item_component.html.erb
@@ -14,10 +14,10 @@
       <% end %>
     </div>
     <div class=" text-center lh-1">
-      <h3 class="fs-4 fw-bold mb-4">
+      <h3 class="fs-4 fw-600 mb-4">
         <%= @speaker.full_name %>
       </h3>
-      <p class="fs-6 fw-bold mb-4">
+      <p class="fs-6 fw-600 mb-4">
         <%= @speaker.role %>
       </p>
       <p class="fs-6">
