--- a/app/views/components/_cookies.html.erb
+++ b/app/views/components/_cookies.html.erb
@@ -2,8 +2,8 @@
 
 <% if cookies_banner_presenter.show_cookies_banner %>
   <div class="cookies p-5 p-lg-8" data-controller="components--footer">
-    <div class="cookies-wrap bg-white shadow-l p-lg-8 mw-400px rounded-l">
-      <p class="fs-6">
+    <div class="cookies-wrap bg-white shadow-l p-5 mw-400px rounded-l">
+      <p class="fs-7">
         Abychom mohli měřit návštěvnost webu, potřebujeme Váš souhlas
         se&nbsp;zpracováním osobních údajů prostřednictvím cookies.
         <a class="text-dark text-underline link" href="/stranka/zasady-zpracovani-osobnich-udaju">Více o&nbsp;zpracování osobních údajů</a>
