--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -40,7 +40,7 @@
 @import "article/segment_source_statements";
 @import "article/social_media";
 */
-
+/*
 @import "homepage/cover_story";
 @import "homepage/homepage_donate_and_subscribe";
 @import "homepage/index";
@@ -58,7 +58,9 @@
 @import "shared/donate_and_subscribe";
 @import "shared/footer";
 @import "shared/infobox";
+*/
 // @import "shared/nav";
+/*
 @import "shared/partners";
 @import "shared/speaker_with_stats";
 @import "shared/stats";
@@ -73,3 +75,4 @@
 @import "statement/index";
 @import "statement/show";
 @import "statement/show_preview";
+*/
