--- a/app/views/article/collaboration_with_facebook.html.erb
+++ b/app/views/article/collaboration_with_facebook.html.erb
@@ -18,7 +18,7 @@
       >
         <div class="expander expander-dark-light" data-target="components--mobile-expander.expander">
           <h1 class="display-5 fw-bold m-0 p-0"><%= get_web_content("article.collaboration_with_facebook", "title") %></h1>
-          <div class="fs-5 mt-5">
+          <div class="fs-5 mt-5 dark-content">
             <%= raw(get_web_content("article.collaboration_with_facebook", "intro")) %>
           </div>
         </div>
