--- a/app/views/article/social_media.html.erb
+++ b/app/views/article/social_media.html.erb
@@ -17,7 +17,7 @@
       >
         <div class="expander expander-dark-light" data-target="components--mobile-expander.expander">
           <h1 class="display-5 fw-bold mb-5"><%= get_web_content("article.social_media", "title") %></h1>
-          <div class="fs-5 mt-5">
+          <div class="fs-5 mt-5 dark-content">
             <%= raw(get_web_content("article.social_media", "intro")) %>
           </div>
           <a class="logo mt-5" title="Nadační fond nezávislé žurnalistiky" href="https://www.nfnz.cz/">
