--- a/app/views/article/presidential_election.html.erb
+++ b/app/views/article/presidential_election.html.erb
@@ -15,7 +15,7 @@
         data-components--mobile-expander-open-label="Skrýt obsah"
         data-components--mobile-expander-close-label="Zobrazit více"
       >
-        <div class="expander expander-dark-light" data-target="components--mobile-expander.expander">
+        <div class="expander expander-dark-light dark-content" data-target="components--mobile-expander.expander">
           <h1 class="display-5 fw-bold m-0 p-0">Volba prezidenta 2023</h1>
           <div class="fs-6 mt-5">
             13. a 14. ledna se koná první kolo prezidentských voleb. Projekt Demagog.cz i tentokrát pečlivě sleduje debaty a rozhovory s kandidáty a publikuje hodnocení jejich faktických výroků.
