Volba prezidenta title

--- a/app/views/article/presidential_election.html.erb
+++ b/app/views/article/presidential_election.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, get_web_content("Volba prezidenta 2023", "title")) %>
+<% content_for(:title, "Volba prezidenta 2023") %>
 
 <div class="row g-5 g-lg-10 flex-lg-row-reverse">
   <div class="col col-12">
