Statements distance fix css

--- a/app/views/statement/_detail.html.erb
+++ b/app/views/statement/_detail.html.erb
@@ -108,7 +108,7 @@
           <%= statement.approved_assessment.short_explanation %>
         </div>
         <div class="accordion-content close" data-target="components--accordion.content">
-          <div class="scroll-vertical mh-400px content fs-6">
+          <div class="scroll-vertical mh-400px my-5 content fs-6">
             <%= raw(statement.approved_assessment.explanation_html) %>
           </div>
         </div>
