Remove data-turbolinks-track

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Administrace ᗧ··•··ᗣ·· Demagog.cz</title>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag 'admin', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'admin', media: 'all' %>
 
     <link rel="shortcut icon" href="<%= asset_path("favicon.png") %>" type="image/x-icon" />
     <!-- Add apple touch icon -->
