--- a/app/views/page/templates/_api_docs.html.erb
+++ b/app/views/page/templates/_api_docs.html.erb
@@ -158,6 +158,6 @@
 </article>
 
 <% content_for :stylesheets do %>
-  <%= stylesheet_link_tag 'prism.css', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'prism.css', media: 'all' %>
 <% end %>
-<%= javascript_include_tag 'prism.js', 'data-turbolinks-track': 'reload' %>
+<%= javascript_include_tag 'prism.js' %>
